# animation_editor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  _makefile_clases_app  _makefile_controladores  _makefile_dependencias_main  _makefile_herramientas  make_appimage.sh  makefile_comun  makefile_linux
bootstrap/: bootstrap_aplicacion.cpp
class/app/: linea_frame.cpp  linea_frame.h  linea_listado.cpp  linea_listado.h  tabla_animaciones.cpp  tabla_animaciones.h  tabla_sprites.cpp  tabla_sprites.h
class/controladores/: controlador_animaciones.cpp  controlador_animaciones.h  controlador_frames.cpp  controlador_frames.h  controlador_selector.cpp  controlador_selector.h  director_estados.h
class/framework/base/: cargador_recursos_base.cpp  cargador_recursos_base.h  configuracion_base.cpp  kernel_base.cpp  kernel_base.h
class/framework/derivada/: cargador_recursos.h  input.cpp  input.h  kernel.cpp  kernel.h
class/herramientas_proyecto/: estructura_paginacion.cpp  estructura_paginacion.h  linea_listado.cpp  linea_listado.h  listado_rejilla.h  listado_vertical.cpp  listado_vertical.h  tabla_animaciones.cpp  tabla_animaciones.h  tabla_sprites.h
class/herramientas_proyecto/versiones_consumibles/: tabla_animaciones.cpp  tabla_animaciones.h  tabla_sprites.cpp  tabla_sprites.h
dependencies/herramientas_proyecto-frozen/: makefile_linux
example/: animations.txt
include/app/: animation.h  animation_loader.h  animation_saver.h  definitions.h  frame.h  visuals.h
include/controller/: animation.h  change_animation_id.h  file_browser.h  frame_selection.h  help.h  main.h  rename_animation.h  states.h
include/dfwimpl/: config.h  state_driver.h
include/input/: input.h
include/tools/: ticker.h
linuxdeploy/: animation_editor.desktop  net.caballorenoir.animation_editor.appdata.xml
resources/: config.json  layouts.json
resources/assets/texts/: help.txt
scripts/templates/src/dfwimpl/: state_driver.cpp
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  animation_loader.cpp  animation_saver.cpp  definitions.cpp  visuals.cpp
src/controller/: CMakeLists.txt  animation.cpp  change_animation_id.cpp  file_browser.cpp  frame_selection.cpp  help.cpp  main.cpp  rename_animation.cpp
src/dfwimpl/: config.cpp  state_driver.cpp
src/env/: CMakeLists.txt  env.cpp
src/tests/: animation_loader.cpp  animation_saver.cpp  test_macros.h
src/tools/: CMakeLists.txt  ticker.cpp
